Removed saltstack