@@ -1,3 +1,4 @@
 export ANDROID_HOME=/opt/android-sdk-linux
 export ANDROID_SDK=/opt/android-sdk-linux
-
+export JAVA_OPTS="--add-modules java.xml.bind"
+export PATH="$PATH:/opt/android-sdk-linux/tools/bin"
